<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MorScout</string>

    <!-- Navigation Menu -->
    <string name="navigation_frame1">Matches</string>
    <string name="navigation_frame2">Teams</string>
    <string name="navigation_frame3">Sync</string>
    <string name="navigation_frame4">Log Out</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>

    <!-- Login Activity -->
    <string name="username_textbox">Username</string>
    <string name="password_textbox">Password</string>
    <string name="hostname_textbox">Host</string>
    <string name="login_button">Login</string>

    <!-- Main Activity -->
    <string name="title_activity_main">Main</string>

    <!-- Matches Fragment -->
    <string name="title_fragment_matches">Matches</string>
    <string name="failed_to_connect">Failed to connect to server</string>

    <!-- Teams Fragment -->
    <string name="title_fragment_teams">Teams</string>

    <!-- Post Fragment -->
    <string name="title_fragment_sync">Sync</string>
    <string name="host_textbox">Hostname</string>
    <string name="port_textbox">Port</string>
    <string name="path_textbox">Path</string>
    <string name="sync_button">Sync</string>

    <!-- Form Activity -->
    <string name="title_activity_form">FormActivity</string>

    <!-- Form Strings -->
    <string name="form_human_label">Where is the human player</string>
    <string name="form_human_other">Other Side</string>
    <string name="form_human_own">Own Side</string>
    <string name="form_human_litter">Litter Zone</string>
    <string name="form_tote_knock_label">Did they knock over totes?</string>
    <string name="form_tote_level">What was the highest level tote?</string>
    <string name="form_bin_number">How many recycle bins?</string>
    <string name="form_bin_litter">How much litter was in recycle bins?</string>
    <string name="form_tote_flip">Flipped totes?</string>
    <string name="form_cycle_time">How long was their cycle time (secs)?"</string>
    <string name="form_auto_label">Autonomous</string>
    <string name="form_auto_totes_number"># of totes stacked</string>
    <string name="form_auto_set_label">What type(s) of sets did they accomplish?</string>
    <string name="form_auto_set_tote">Tote set</string>
    <string name="form_auto_set_container">Container set</string>
    <string name="form_auto_set_stacked">Stacked tote set</string>
    <string name="form_wheels_label">What type of wheels?</string>
    <string name="form_coop_label">How many co-op points</string>



</resources>
