<ScrollView
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.team1515.morscout.FormActivity"
    android:background="#ccff7700" >

    <!-- Heading -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="General"
        android:id="@+id/generalHeading"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="25sp" />

    <!-- Human Player -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/generalHeading"
        android:id="@+id/humanLabel"
        android:text="@string/form_human_label" />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/humanLabel"

        android:id="@+id/humanRadio">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_human_own"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_human_other"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_human_litter"/>
    </RadioGroup>

    <!-- Tote knocking over -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/humanRadio"
        android:text="@string/form_tote_knock_label"
        android:id="@+id/knockTotesLabel"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/knockTotesLabel"
        android:id="@+id/knockTotesRadio" >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yes" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No" />
        </RadioGroup>

    <!-- Tote stacking -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/knockTotesRadio"
        android:text="@string/form_tote_level"
        android:id="@+id/stackTotesLabel"/>

    <Spinner android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/tote_height"
        android:layout_alignBottom="@+id/stackTotesLabel"
        android:layout_toRightOf="@+id/stackTotesLabel"
        android:layout_toEndOf="@+id/stackTotesLabel"
        android:id="@+id/stackTotesSpinner" />

    <!-- Recycle Bins -->
    <Spinner android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/bins_number"
        android:layout_below="@id/stackTotesSpinner"
        android:layout_toRightOf="@+id/binNumberLabel"
        android:layout_toEndOf="@+id/binNumberLabel"
        android:id="@+id/binNumberSpinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_bin_number"
        android:id="@+id/binNumberLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@id/binNumberSpinner"/>

    <!-- Bin in litter -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/binNumberLabel"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/form_bin_litter"
        android:id="@+id/litterLabel" />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/litterLabel"
        android:layout_toRightOf="@+id/litterLabel"
        android:layout_toEndOf="@+id/litterLabel"
        android:entries="@array/bins_number"
        android:id="@+id/litterSpinner" />

    <!-- Flip totes -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/flipTotesLabel"
        android:text="@string/form_tote_flip"
        android:layout_centerVertical="true"
        android:layout_below="@id/litterLabel"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/flipTotesLabel"
        android:layout_toRightOf="@+id/flipTotesLabel"
        android:layout_toEndOf="@+id/flipTotesLabel"
        android:id="@+id/littlerCheck"/>

    <!-- Cycle Time -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_cycle_time"
        android:layout_centerVertical="true"
        android:layout_below="@id/flipTotesLabel"
        android:id="@+id/cycleTimeLabel"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="left"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_alignBottom="@id/cycleTimeLabel"
        android:layout_alignRight="@id/cycleTimeLabel"
        android:layout_alignEnd="@id/cycleTimeLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/cycleTimeLabel"
        android:layout_toEndOf="@+id/cycleTimeLabel"
        android:inputType="number|numberSigned"
        android:id="@+id/cycleTimeBox"/>

    <!-- Wheel type -->
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cycleTimeBox"
        android:entries="@array/wheel_types"
        android:layout_toRightOf="@+id/wheelLabel"
        android:layout_toEndOf="@id/wheelLabel"
        android:id="@+id/wheelSpinner"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cycleTimeLabel"
        android:text="@string/form_wheels_label"
        android:layout_alignBottom="@id/wheelSpinner"
        android:id="@+id/wheelLabel"/>

    <!-- Co-op points -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_coop_label"
        android:id="@+id/coopLabel"
        android:layout_below="@id/wheelLabel"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/coopLabel"
        android:inputType="number|numberSigned"
        android:gravity="end"
        android:layout_below="@id/wheelSpinner"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <!-- Heading -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/coopLabel"
        android:text="Autonomous"
        android:id="@+id/autonomousHeading"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="25sp" />

    <!-- Tote Number -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_auto_totes_number"
        android:layout_below="@id/autonomousHeading"
        android:id="@+id/autoToteNumber"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/bins_number"
        android:layout_toRightOf="@id/autoToteNumber"
        android:layout_toEndOf="@id/autoToteNumber"
        android:layout_alignBottom="@id/autoToteNumber" />


    <!-- Auto set -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/autoToteNumber"
        android:text="@string/form_auto_set_label"
        android:id="@+id/autoSetLabel" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/autoSetLabel">
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/form_auto_set_tote"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/form_auto_set_container"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_auto_set_stacked"/>

        </RadioGroup>
</RelativeLayout>
    </ScrollView>