<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:focusable="true"
    android:background="#ccff7700">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameText"
        android:hint="@string/username_textbox"
        android:singleLine="true"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/passwordText"
        android:layout_alignRight="@+id/passwordText"
        android:layout_alignStart="@+id/passwordText"
        android:layout_alignEnd="@+id/passwordText"
        android:layout_above="@id/passwordText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordText"
        android:clickable="true"
        android:password="true"
        android:hint="@string/password_textbox"
        android:singleLine="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordText"
        android:layout_alignLeft="@+id/passwordText"
        android:layout_alignStart="@+id/passwordText"
        android:layout_alignRight="@+id/passwordText"
        android:layout_alignEnd="@+id/passwordText"
        android:onClick="loginClick" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hostnameTextbox"
        android:hint="@string/hostname_textbox"
        android:singleLine="true"
        android:layout_above="@+id/usernameText"
        android:layout_alignLeft="@+id/usernameText"
        android:layout_alignStart="@+id/usernameText"
        android:layout_alignRight="@+id/usernameText"
        android:layout_alignEnd="@+id/usernameText" />

</RelativeLayout>