<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ccff7700" >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hostnameTextbox"
        android:hint="@string/host_textbox"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:singleLine="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/portTextbox"
        android:layout_below="@+id/hostnameTextbox"
        android:hint="@string/port_textbox"
        android:layout_alignLeft="@+id/hostnameTextbox"
        android:layout_alignStart="@+id/hostnameTextbox"
        android:layout_alignRight="@+id/hostnameTextbox"
        android:layout_alignEnd="@+id/hostnameTextbox"
        android:singleLine="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pathTextbox"
        android:layout_below="@+id/portTextbox"
        android:hint="@string/path_textbox"
        android:layout_alignLeft="@+id/portTextbox"
        android:layout_alignStart="@+id/portTextbox"
        android:layout_alignRight="@+id/portTextbox"
        android:layout_alignEnd="@+id/portTextbox"
        android:singleLine="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sync_button"
        android:id="@+id/syncButton"
        android:layout_below="@+id/pathTextbox"
        android:layout_alignRight="@+id/pathTextbox"
        android:layout_alignEnd="@+id/pathTextbox"
        android:layout_alignLeft="@+id/pathTextbox"
        android:layout_alignStart="@+id/pathTextbox"
        android:onClick="syncButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/responseTextView"
        android:layout_below="@+id/syncButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:singleLine="false" />
</RelativeLayout>